fixes alignment for icon text

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -617,9 +617,10 @@ header{
                 color:$dark-gray;
                 font-weight: bolder;
                 font-size: 1.6em;
+                text-align: center;
 
                 @include desktop(){
-                    font-size: 1.2em;
+                    font-size: 1.1em;
                 }
             }
         }
